--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
     ],
     "require": {
         "php": "^8.1|^8.2|^8.3",
-        "illuminate/database": "^10.0|^11.0|^12.0",
-        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/database": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
         "smi2/phpclickhouse": "^1.6"
     },
     "require-dev": {
@@ -43,7 +43,10 @@
         "laravel": {
             "providers": [
                 "KundanIn\\ClickHouseLaravel\\ClickHouseServiceProvider"
-            ]
+            ],
+            "aliases": {
+                "ClickHouse": "KundanIn\\ClickHouseLaravel\\Facades\\ClickHouse"
+            }
         }
     },
     "scripts": {
